--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -8,7 +8,7 @@
         Apache Cordova Team
     </author>
     <access origin="*" />
-    <content src="http://ionsaga.com" />
+    <content src="index.html" />
     <preference name="loglevel" value="DEBUG" />
     <feature name="App">
         <param name="android-package" value="org.apache.cordova.App" />
