--- a/assets/www/css/index.css
+++ b/assets/www/css/index.css
@@ -1,10 +1,15 @@
 #app {
     width: 100%;
     height: 100%;
+    background-color: #F3F3F3;
 }
 
 .header md-card{
     color: #fff;
     text-align: center;
     background-color: #5677fc;
+}
+
+md-item-content {
+    border-bottom: 1px solid #444;
 }
