Added support for accelerometer detection.

--- a/assets/www/css/index.css
+++ b/assets/www/css/index.css
@@ -167,7 +167,8 @@ a {
     margin-top: 50px;
 }
 
-.card.login .buttons > div {
+.card.login .buttons > div,
+.card.login .buttons > button {
     display: inline-block;
     margin: 0 20px;
 }
