--- a/assets/www/css/index.css
+++ b/assets/www/css/index.css
@@ -11,6 +11,48 @@ body {
     -webkit-tap-highlight-color: transparent;
 }
 
+body > div#overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1000;
+    background: rgba(90,90,90,0.8);
+}
+
+body > div#overlay .wrapper {
+    width: 70%;
+    margin: auto;
+    background: #555;
+    color: #FFF;
+    padding: 20px;
+    margin-top: 25%;
+    border-radius: 5px;
+    font-size: 18px;
+    box-shadow: 5px 5px 7px rgba(0,0,0,0.3);
+}
+
+body > div#overlay .wrapper .header {
+    font-size: 24px;
+    width: 100%;
+    text-align: center;
+}
+
+body > div#overlay .wrapper label {
+    margin-top: 10px;
+    display: block;
+}
+
+body > div#overlay .wrapper input {
+    width: 100%;
+    height: 20px;
+}
+
+body > div#overlay .wrapper button {
+    padding: 10px;
+    font-size: 16px;
+    margin-top: 28px;
+}
+
 a {
     text-decoration: none;
     color: rgb(26, 157, 200); /* Blue */
@@ -25,12 +67,20 @@ a {
     display: none;
 }
 
+.transparent {
+    opacity: 0;
+}
+
 .circle {
     width: 80px;
     height: 80px;
     border: none;
     border-radius: 40px;
     z-index: 4;
+}
+
+.circle.active {
+    border: 2px solid limegreen;
 }
 
 .circle.grey {
@@ -52,6 +102,10 @@ a {
     margin-bottom: 20px;
     width: 100%;
     text-align: center;
+}
+
+.circle.active {
+    border: 2px solid limegreen;
 }
 
 .nav-controls .circle {
@@ -195,8 +249,18 @@ a {
     margin-bottom: 7px;
 }
 
+.card .sensor-edit.center {
+    position: relative;
+    right: auto;
+    margin: auto;
+}
+
 .card .sensor-row {
     display: table-row;
+}
+
+.card.data .sensor-row {
+    height: 90px;
 }
 
 .card .sensor-row > div {
@@ -236,6 +300,7 @@ a {
     font-size: 10px;
     display: block;
     margin-top: 3px;
+    color: rgb(26, 157, 200);
 }
 
 .card .sensor-no,
