--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -19,4 +19,7 @@
     <feature name="Sms">
         <param name="android-package" value="com.jsmobile.plugins.sms.Sms" />
     </feature>
+    <feature name="Gyroscope">
+        <param name="android-package" value="org.dartlang.phonegap.gyroscope.GyroscopeListener" />
+    </feature>
 </widget>
