--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -25,4 +25,7 @@
     <feature name="BluetoothSerial">
         <param name="android-package" value="com.megster.cordova.BluetoothSerial" />
     </feature>
+    <feature name="Proximity">
+        <param name="android-package" value="org.awokenwell.proximity.ProximitySensorListener" />
+    </feature>
 </widget>
